// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App snapshot > renders a connected device with a full configuration 1`] = `
"<div class="app">
  <header class="topbar">
    <div class="brand"><span class="brand-mark">🍫</span>
      <div>
        <h1>Open Chocolate</h1>
        <p>M-Vave Chocolate Plus configuration</p>
      </div>
    </div>
    <div class="topbar-actions">
      <!-- A disabled button swallows hover, so the hint lives on a wrapper span
             that stays interactive while the button itself is disabled. --><span class="rescan-tip disabled" title="Rescan is disabled while connected to a device — disconnect first to enable it."><button class="btn" disabled="">Rescan</button></span>
    </div>
  </header>
  <!--v-if-->
  <main class="layout">
    <section class="card">
      <div class="card-head">
        <h2>Devices</h2><span class="muted">1 discovered</span>
      </div>
      <!--v-if-->
      <ul class="device-list">
        <li class="device-row" role="button" tabindex="0" aria-label="Select device Chocolate Plus"><span class="dot dot-green" title="Connected"></span>
          <div class="device-info"><span class="device-name">Chocolate Plus</span><span class="muted small">SinCo · Connected</span></div><button class="btn btn-small"> Disconnect </button>
        </li>
      </ul>
    </section>
    <section class="card">
      <div class="card-head">
        <h2>Configuration</h2>
        <div class="row gap"><button class="btn btn-small"> Re-read </button><button class="btn btn-small"> Export </button><button class="btn btn-small">Import</button><button class="btn btn-small btn-primary"> Apply all to device </button><input type="file" accept="application/json,.json" hidden=""></div>
      </div><label class="field"><span>Operating mode</span><select class="control" value="3">
          <option value="0">MIDI Program Change (PC)</option>
          <option value="1">MIDI Control Change (CC)</option>
          <option value="2">Custom (WIP)</option>
          <option value="3">Advanced Custom (WIP)</option>
          <option value="4">Manufacturer Control (WIP)</option>
          <option value="5">Touch Screen (Android) (WIP)</option>
          <option value="6">Video Control</option>
          <option value="7">Keyboard A</option>
          <option value="8">Keyboard B</option>
          <option value="9">Music Player Control</option>
          <option value="10">Custom Keyboard (WIP)</option>
          <option value="11">Mix Key (WIP)</option>
          <option value="12">Speaker (WIP)</option>
        </select></label><!-- ---- mode-specific sub-view ---- -->
      <div class="mode-view">
        <p class="mode-info">Per-footswitch programmable MIDI codes (PC, CC, Note On/Off, SysEx). Variant 1 offers five sub-modes; variant 2 offers short tap + long press with up to 16 switchable groups.</p>
        <p class="mode-info muted small">Variant 2 groups are switched with the virtual buttons E (A+B) and F (C+D); variant 1 cannot switch groups.</p><!-- Program Change A / B -->
        <!-- Advanced Custom -->
        <div class="field"><span>Variant</span>
          <div class="row gap radio-row"><label class="row small"><input type="radio" name="usrpage" checked="" value="0"> Mode 1 - five sub-modes </label><label class="row small"><input type="radio" name="usrpage" value="1"> Mode 2 - short tap + long press (up to 16 groups) </label></div>
        </div>
        <div class="sw-tabs" role="tablist" aria-label="Footswitch"><button class="seg-btn sw-tab active" role="tab" aria-selected="true"> Footswitch A</button><button class="seg-btn sw-tab" role="tab" aria-selected="false"> Footswitch B</button><button class="seg-btn sw-tab" role="tab" aria-selected="false"> Footswitch C</button><button class="seg-btn sw-tab" role="tab" aria-selected="false"> Footswitch D</button></div>
        <section class="bank-editor">
          <div class="bank-head"><span class="bank-title">Footswitch A</span><select class="control narrow-select" value="1">
              <option value="0">Single tap (single group of information)</option>
              <option value="1">Single tap (two groups switching)</option>
              <option value="2">Press-release (two groups switching)</option>
              <option value="3">Long press</option>
              <option value="4">Short tap - long press</option>
            </select></div>
          <div class="seg bank-tabs"><button class="seg-btn active"> Bank A </button><button class="seg-btn"> Bank B </button></div>
          <!--v-if-->
          <ul class="bank-list">
            <li class="bank-row"><span class="mono bank-summary"> [1]&nbsp;&nbsp;CH 2&nbsp;&nbsp;PC&nbsp;&nbsp;5&nbsp;&nbsp;0</span><span class="bank-actions"><button class="btn btn-small"> Edit </button><button class="btn btn-small"> Remove </button></span></li>
            <li class="bank-row"><span class="mono bank-summary"> [2]&nbsp;&nbsp;CH 1&nbsp;&nbsp;Note ON&nbsp;&nbsp;60&nbsp;&nbsp;100</span><span class="bank-actions"><button class="btn btn-small"> Edit </button><button class="btn btn-small"> Remove </button></span></li>
          </ul>
          <div class="row gap bank-tools"><button class="btn btn-small"> Add message </button><button class="btn btn-small"> Remove all </button></div>
          <!--v-if-->
        </section>
      </div><!-- ---- device-wide settings ---- -->
      <h3>Device-wide settings</h3>
      <div class="grid"><label class="field"><span>MIDI channel</span><select class="control" value="5">
            <option value="1">1</option>
            <option value="2">2</option>
            <option value="3">3</option>
            <option value="4">4</option>
            <option value="5">5</option>
            <option value="6">6</option>
            <option value="7">7</option>
            <option value="8">8</option>
            <option value="9">9</option>
            <option value="10">10</option>
            <option value="11">11</option>
            <option value="12">12</option>
            <option value="13">13</option>
            <option value="14">14</option>
            <option value="15">15</option>
            <option value="16">16</option>
          </select></label><label class="field"><span>Max groups</span><select class="control" value="8">
            <option value="1">1</option>
            <option value="2">2</option>
            <option value="3">3</option>
            <option value="4">4</option>
            <option value="5">5</option>
            <option value="6">6</option>
            <option value="7">7</option>
            <option value="8">8</option>
          </select></label>
        <div class="field"><span>TRS jack</span>
          <div class="row gap radio-row"><label class="row small"><input type="radio" name="trs-jack"> Expression pedal </label><label class="row small"><input type="radio" name="trs-jack" checked=""> TRS-MIDI </label></div>
        </div><label class="field row"><span>Reverse polarity</span><input type="checkbox" class="switch" checked=""></label>
      </div>
    </section>
    <section class="card monitor-card">
      <div class="card-head">
        <h2>MIDI monitor</h2>
        <div class="row gap">
          <div class="seg"><button class="seg-btn active">All</button><button class="seg-btn">RX</button><button class="seg-btn">TX</button></div><label class="row small muted"><input type="checkbox"> auto-scroll </label><button class="btn btn-small">Clear</button>
        </div>
      </div>
      <div class="monitor-list mono">
        <p class="muted empty">No MIDI traffic yet.</p>
      </div>
    </section>
  </main>
</div>"
`;

exports[`App snapshot > renders a detected device (auto-selected) with a Connect button 1`] = `
"<div class="app">
  <header class="topbar">
    <div class="brand"><span class="brand-mark">🍫</span>
      <div>
        <h1>Open Chocolate</h1>
        <p>M-Vave Chocolate Plus configuration</p>
      </div>
    </div>
    <div class="topbar-actions">
      <!-- A disabled button swallows hover, so the hint lives on a wrapper span
             that stays interactive while the button itself is disabled. --><span class="rescan-tip" title="Scan MIDI ports again for M-Vave Chocolate Plus devices."><button class="btn">Rescan</button></span>
    </div>
  </header>
  <!--v-if-->
  <main class="layout">
    <section class="card">
      <div class="card-head">
        <h2>Devices</h2><span class="muted">1 discovered</span>
      </div>
      <!--v-if-->
      <ul class="device-list">
        <li class="device-row selected" role="button" tabindex="0" aria-label="Select device Chocolate Plus"><span class="dot dot-yellow" title="Detected"></span>
          <div class="device-info"><span class="device-name">Chocolate Plus</span><span class="muted small">SinCo · Detected</span></div><button class="btn btn-small btn-primary">Connect</button>
        </li>
      </ul>
    </section>
    <section class="card">
      <div class="card-head">
        <h2>Configuration</h2>
        <div class="row gap"><button class="btn btn-small" disabled=""> Re-read </button><button class="btn btn-small" disabled=""> Export </button><button class="btn btn-small" disabled="">Import</button><button class="btn btn-small btn-primary" disabled=""> Apply all to device </button><input type="file" accept="application/json,.json" hidden=""></div>
      </div>
      <p class="muted empty"> Connect a device to read and change its configuration. </p>
    </section>
    <section class="card monitor-card">
      <div class="card-head">
        <h2>MIDI monitor</h2>
        <div class="row gap">
          <div class="seg"><button class="seg-btn active">All</button><button class="seg-btn">RX</button><button class="seg-btn">TX</button></div><label class="row small muted"><input type="checkbox"> auto-scroll </label><button class="btn btn-small">Clear</button>
        </div>
      </div>
      <div class="monitor-list mono">
        <p class="muted empty">No MIDI traffic yet.</p>
      </div>
    </section>
  </main>
</div>"
`;

exports[`App snapshot > renders the error banner when the scan fails 1`] = `
"<div class="app">
  <header class="topbar">
    <div class="brand"><span class="brand-mark">🍫</span>
      <div>
        <h1>Open Chocolate</h1>
        <p>M-Vave Chocolate Plus configuration</p>
      </div>
    </div>
    <div class="topbar-actions">
      <!-- A disabled button swallows hover, so the hint lives on a wrapper span
             that stays interactive while the button itself is disabled. --><span class="rescan-tip" title="Scan MIDI ports again for M-Vave Chocolate Plus devices."><button class="btn">Rescan</button></span>
    </div>
  </header>
  <p class="error-banner">Web MIDI API not available.</p>
  <main class="layout">
    <section class="card">
      <div class="card-head">
        <h2>Devices</h2><span class="muted">0 discovered</span>
      </div>
      <p class="muted empty">Press Rescan to look for M-Vave Chocolate Plus devices on your MIDI ports.</p>
      <ul class="device-list"></ul>
    </section>
    <section class="card">
      <div class="card-head">
        <h2>Configuration</h2>
        <div class="row gap"><button class="btn btn-small" disabled=""> Re-read </button><button class="btn btn-small" disabled=""> Export </button><button class="btn btn-small" disabled="">Import</button><button class="btn btn-small btn-primary" disabled=""> Apply all to device </button><input type="file" accept="application/json,.json" hidden=""></div>
      </div>
      <p class="muted empty"> Connect a device to read and change its configuration. </p>
    </section>
    <section class="card monitor-card">
      <div class="card-head">
        <h2>MIDI monitor</h2>
        <div class="row gap">
          <div class="seg"><button class="seg-btn active">All</button><button class="seg-btn">RX</button><button class="seg-btn">TX</button></div><label class="row small muted"><input type="checkbox"> auto-scroll </label><button class="btn btn-small">Clear</button>
        </div>
      </div>
      <div class="monitor-list mono">
        <p class="muted empty">No MIDI traffic yet.</p>
      </div>
    </section>
  </main>
</div>"
`;

exports[`App snapshot > renders the shell with no devices after scan 1`] = `
"<div class="app">
  <header class="topbar">
    <div class="brand"><span class="brand-mark">🍫</span>
      <div>
        <h1>Open Chocolate</h1>
        <p>M-Vave Chocolate Plus configuration</p>
      </div>
    </div>
    <div class="topbar-actions">
      <!-- A disabled button swallows hover, so the hint lives on a wrapper span
             that stays interactive while the button itself is disabled. --><span class="rescan-tip" title="Scan MIDI ports again for M-Vave Chocolate Plus devices."><button class="btn">Rescan</button></span>
    </div>
  </header>
  <!--v-if-->
  <main class="layout">
    <section class="card">
      <div class="card-head">
        <h2>Devices</h2><span class="muted">0 discovered</span>
      </div>
      <p class="muted empty">No devices responded to the discovery request.</p>
      <ul class="device-list"></ul>
    </section>
    <section class="card">
      <div class="card-head">
        <h2>Configuration</h2>
        <div class="row gap"><button class="btn btn-small" disabled=""> Re-read </button><button class="btn btn-small" disabled=""> Export </button><button class="btn btn-small" disabled="">Import</button><button class="btn btn-small btn-primary" disabled=""> Apply all to device </button><input type="file" accept="application/json,.json" hidden=""></div>
      </div>
      <p class="muted empty"> Connect a device to read and change its configuration. </p>
    </section>
    <section class="card monitor-card">
      <div class="card-head">
        <h2>MIDI monitor</h2>
        <div class="row gap">
          <div class="seg"><button class="seg-btn active">All</button><button class="seg-btn">RX</button><button class="seg-btn">TX</button></div><label class="row small muted"><input type="checkbox"> auto-scroll </label><button class="btn btn-small">Clear</button>
        </div>
      </div>
      <div class="monitor-list mono">
        <p class="muted empty">No MIDI traffic yet.</p>
      </div>
    </section>
  </main>
</div>"
`;
